# brutus

./: .gitignore  CMakeLists.txt  README.md  build.bat
.ci_scripts/: build_upload.sh  install_dependencies.sh  run_build.sh  run_cmake.sh
.github/workflows/: main.yml
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
ext/dirent/: dirent.h
ext/png/: pngwrite.c
ext/tinyfiledialogs/: tinyfiledialogs.c
res/: brutus.rc  brutus.res
src/: brutus.c
src/building/: animation.c  animation.h  barracks.c  barracks.h  building.c  building.h  building_state.c  building_state.h  clone.c  clone.h  construction.c  construction.h  construction_building.c  construction_clear.c  construction_routed.c  construction_warning.c  construction_warning.h  count.c  count.h  destruction.c  destruction.h  dock.c  dock.h  figure.c  granary.c  granary.h  house.c  house.h  house_evolution.c  house_evolution.h  house_population.c  house_service.c  industry.c  industry.h  list.c  list.h  maintenance.c  market.c  market.h  menu.c  (+8 more)
src/city/: buildings.c  buildings.h  city_new.c  city_new.h  constants.h  culture.c  culture.h  data.c  data.h  data_private.h  emperor.c  emperor.h  entertainment.c  entertainment.h  festival.c  festival.h  figures.c  finance.c  finance.h  gods.c  gods.h  health.c  health.h  houses.c  houses.h  labor.c  labor.h  map.c  map.h  message.c  message.h  migration.c  military.c  military.h  mission.c  mission.h  population.c  population.h  ratings.c  ratings.h  (+14 more)
src/core/: backtrace.c  buffer.c  buffer.h  calc.c  calc.h  config.c  config.h  dir.c  dir.h  encoding.c  encoding.h  file.c  file.h  hotkey_config.c  hotkey_config.h  image.c  image.h  image_group.h  image_group_editor.h  io.c  io.h  lang.c  lang.h  random.c  random.h  smacker.c  smacker.h  speed.c  speed.h  string.c  string.h  time.c  time.h  zip.c
src/editor/: editor.c  editor.h  tool.c  tool.h  tool_restriction.c  tool_restriction.h
src/empire/: city.c  city.h  empire.c  empire.h  object.c  object.h  trade_prices.c  trade_prices.h  trade_route.c  trade_route.h
src/figure/: action.c  action.h  combat.c  combat.h  enemy_army.c  figure.c  figure.h  formation.c  formation.h  formation_enemy.c  formation_enemy.h  formation_herd.c  formation_herd.h  formation_layout.c  formation_legion.c  formation_legion.h  image.c  image.h  movement.c  movement.h  name.c  name.h  phrase.c  phrase.h  properties.c  route.c  route.h  service.c  service.h  sound.c  sound.h  trader.c  trader.h  type.h
src/figuretype/: animal.c  animal.h  cartpusher.c  cartpusher.h  crime.c  crime.h  docker.c  docker.h  editor.c  editor.h  enemy.c  enemy.h  entertainer.c  entertainer.h  figuretype.c  figuretype.h  maintenance.c  maintenance.h  market.c  market.h  migrant.c  migrant.h  missile.c  missile.h  native.c  native.h  service.c  service.h  soldier.c  soldier.h  trader.c  trader.h  wall.c  wall.h  water.c  water.h
src/game/: animation.c  cheats.c  cheats.h  custom_strings.c  custom_strings.h  difficulty.c  difficulty.h  file.c  file.h  file_editor.c  file_editor.h  file_io.c  file_io.h  game.c  game.h  orientation.c  orientation.h  resource.c  settings.c  settings.h  speed.c  state.c  state.h  system.h  tick.c  tick.h  time.c  time.h  undo.c  undo.h
src/graphics/: arrow_button.c  arrow_button.h  button.c  font.c  font.h  generic_button.c  generic_button.h  graphics.c  graphics.h  image.c  image.h  image_button.c  image_button.h  lang_text.c  lang_text.h  menu.c  menu.h  rich_text.c  rich_text.h  screenshot.c  scrollbar.c  scrollbar.h  text.c  text.h  tooltip.c  video.c  warning.c  window.c  window.h
src/input/: cursor.c  cursor.h  hotkey.c  hotkey.h  input.c  input.h  keyboard.c  keyboard.h  keys.c  keys.h  mouse.c  mouse.h  scroll.c  scroll.h
src/map/: aqueduct.c  aqueduct.h  bookmark.c  bookmark.h  bridge.c  building.c  building.h  building_tiles.c  desirability.c  desirability.h  elevation.c  elevation.h  figure.c  figure.h  grid.c  grid.h  image.c  image.h  image_context.c  image_context.h  map.c  map.h  natives.c  orientation.c  point.c  point.h  property.c  property.h  random.c  random.h  ring.c  ring.h  road_access.c  road_access.h  road_aqueduct.c  road_network.c  routing.c  routing.h  routing_data.c  routing_data.h  (+12 more)
src/platform/: arguments.c  arguments.h  brutus.c  brutus.h  cursor.c  cursor.h  file_manager.c  file_manager.h  julius.c  keyboard_input.c  log.c  screen.c  sound_device.c
src/scenario/: building.c  criteria.c  criteria.h  data.h  demand_change.c  demand_change.h  distant_battle.c  editor.c  editor.h  editor_events.c  editor_events.h  empire.c  empire.h  invasion.c  invasion.h  map.c  map.h  price_change.c  price_change.h  property.c  property.h  random_event.c  request.c  request.h  scenario.c  scenario.h
src/sound/: channel.h  city.c  city.h  device.h  effect.h  music.c  sound.c  sound.h  speech.c  system.c
src/translation/: english.c  translation.h
src/widget/: city.c  city.h  city_bridge.c  city_bridge.h  city_building_ghost.c  city_building_ghost.h  city_figure.c  city_figure.h  city_overlay.h  city_overlay_education.c  city_overlay_education.h  city_overlay_entertainment.c  city_overlay_entertainment.h  city_overlay_health.c  city_overlay_health.h  city_overlay_other.c  city_overlay_other.h  city_overlay_risks.c  city_overlay_risks.h  city_with_overlay.c  city_with_overlay.h  city_without_overlay.c  city_without_overlay.h  input_box.c  input_box.h  map_editor.c  map_editor.h  map_editor_tool.c  map_editor_tool.h  minimap.c  minimap.h  scenario_minimap.c  top_menu.c  top_menu.h  top_menu_editor.c  top_menu_editor.h
src/window/: advisors.c  advisors.h  build_menu.c  build_menu.h  building_info.c  cck_selection.c  city.c  city.h  config.c  difficulty_options.c  display_options.c  donate_to_city.c  empire.c  empire.h  file_dialog.c  file_dialog.h  gift_to_emperor.c  hold_festival.c  hotkey_config.c  hotkey_config.h  hotkey_editor.c  hotkey_editor.h  intermezzo.c  intermezzo.h  intro_video.c  labor_priority.c  logo.c  logo.h  main_menu.c  main_menu.h  message_dialog.c  message_list.c  military_menu.c  mission_end.c  (+24 more)
(+87 files in other folders)
